Add firebase registration

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -11,5 +11,16 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-item>
+    <ion-label floating>Email Address</ion-label>
+    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+  </ion-item>
+
+  <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+  </ion-item>
+
+  <button ion-button (click)="signup(user)">Sign up</button>
 
 </ion-content>
