Add firebase login authentication

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,7 +17,7 @@
       <ion-input type="password" [(ngModel)]="user.password"></ion-input>
   </ion-item>
 
-  <button ion-button (click)="login()">Login</button>
+  <button ion-button (click)="login(user)">Login</button>
   <button ion-button (click)="signup()">Sign up</button>
 
 </ion-content>
