--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,18 +6,21 @@
 </ion-header>
 
 <ion-content padding>
+    <form (ngSubmit)="login()" [formGroup]="loginForm">
 
-  <ion-item>
-    <ion-label floating>Email Address</ion-label>
-    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
-  </ion-item>
+          <ion-item>
+            <ion-label floating color="mid">Email</ion-label>
+            <ion-input type="text" formControlName="email"></ion-input>
+          </ion-item>
 
-  <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
-  </ion-item>
+          <ion-item>
+            <ion-label floating color="mid">Password</ion-label>
+            <ion-input type="password" formControlName="password"></ion-input>
+          </ion-item>
 
-  <button ion-button (click)="login(user)">Login</button>
-  <button ion-button (click)="signup()">Sign up</button>
+        <div>{{loginError}}</div>
 
+        <button ion-button type="submit">Login</button>
+    </form>
+    <button ion-button (click)="signup()">Signup</button>
 </ion-content>
