--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,26 +1,29 @@
-<!--
-  Generated template for the SignupPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>Signup</ion-title>
+  <ion-title>Signup</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    <ion-label floating>Email Address</ion-label>
-    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
-  </ion-item>
+  <form (ngSubmit)="signup()" [formGroup]="signupForm">
 
-  <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label floating color="mid">Email</ion-label>
+      <ion-input type="text" formControlName="email"></ion-input>
+    </ion-item>
 
-  <button ion-button (click)="signup(user)">Sign up</button>
+    <ion-item>
+      <ion-label floating color="mid">Password</ion-label>
+      <ion-input type="password" formControlName="password"></ion-input>
+    </ion-item>
 
+    <ion-item>
+        <ion-label floating color="mid">Confirm password</ion-label>
+        <ion-input type="password" formControlName="passwordConf"></ion-input>
+    </ion-item>
+
+    <div>{{signupError}}</div>
+
+    <button ion-button type="submit">Signup</button>
+  </form>
 </ion-content>
