--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,26 +1,21 @@
-
-<ion-header>
-  <ion-navbar color="primary">
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-header></ion-header>
 
 <ion-content padding>
-    <form (ngSubmit)="login()" [formGroup]="loginForm">
+  <form (ngSubmit)="login()" [formGroup]="loginForm" class="form">
 
-          <ion-item>
-            <ion-label floating color="mid">Email</ion-label>
-            <ion-input type="text" formControlName="email"></ion-input>
-          </ion-item>
+    <ion-item class="input-field">
+      <ion-label floating color="mid">Email</ion-label>
+      <ion-input type="text" formControlName="email"></ion-input>
+    </ion-item>
 
-          <ion-item>
-            <ion-label floating color="mid">Password</ion-label>
-            <ion-input type="password" formControlName="password"></ion-input>
-          </ion-item>
+    <ion-item class="input-field">
+      <ion-label floating color="mid">Password</ion-label>
+      <ion-input type="password" formControlName="password"></ion-input>
+    </ion-item>
 
-        <div>{{loginError}}</div>
+    <div>{{loginError}}</div>
 
-        <button ion-button type="submit">Login</button>
-    </form>
-    <button ion-button (click)="signup()">Signup</button>
+    <button ion-button type="submit" class="login-button">Login</button>
+  </form>
+  <button ion-button (click)="signup()" color="light" class="signup-button">Signup</button>
 </ion-content>
