Screens are now separated by tabs

--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -4,34 +4,31 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <div class="search-omdb" padding>
+
+<ion-content>
+  <div *ngIf="getTitles().length; else no_content" class="already-watched-list">      
     <ion-searchbar #title
       type="search"
-      (keyup.enter)="search(title.value)"
       placeholder="Search for a title..."
       clear-input=true
-      padding>
+      padding
+      margin>
     </ion-searchbar>
+
+    <ion-list>
+      <ion-item-sliding *ngFor="let title of getTitles()">
+        <ion-item (click)="toggleFoo()">
+          <img [src]="title.imgUrl"><h1>{{ title.title }}</h1>
+        </ion-item>
+
+        <ion-item-options side="end">
+          <button ion-button color="danger" (click)="removeTitleFromAlreadyWatched(title.title)"><ion-icon name="trash"></ion-icon>Delete</button>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
   </div>
 
-  <div *ngFor="let title of getResults()">
-    <div *ngIf="isValidSearch() && title.poster_path!=null" class="valid-search-result" padding>
-      <h1>{{ title.name}} ({{ title.first_air_date }})</h1>
-      <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}"/>
-
-      <p>{{ title.overview }}</p>
-      
-      <button ion-button color="secondary" (click)="addToAlreadyWatched()">Add to Already Watched</button>
-      <button ion-button color="purple" (click)="addToWatchList()">Add to Watch List</button>
-    </div>
-  </div>
-
-  <div *ngIf="isNotFound()">
-    <p>No tv shows found with that title</p>
-  </div>
-
-  <div *ngIf="isNotProvided()">
-    <p>Please provide a title to search for</p>
-  </div>
+  <ng-template #no_content>
+    <h2 style="text-align: center">Already Watched list is empty</h2>
+  </ng-template>
 </ion-content>
