Rebase on Annisha's changes

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -5,27 +5,24 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="search-omdb" padding>
-    <ion-searchbar #title
-      type="search"
-      (keyup.enter)="search(title.value)"
-      placeholder="Search for a title..."
-      clear-input=true
-      padding>
+  <div class="search-imdb" padding>
+    <ion-searchbar #title type="search" (keyup.enter)="search(title.value)" placeholder="Search for a title..."
+      clear-input=true padding>
     </ion-searchbar>
   </div>
 
-  <div *ngFor="let title of getResults()">
-    <div *ngIf="isValidSearch() && title.poster_path!=null" class="valid-search-result" padding>
-      <h1>{{ title.name}} ({{ title.first_air_date }})</h1>
-      <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}"/>
+  <ion-grid *ngIf="isValidSearch()">
+    <ion-row>
+      <ion-col col-6 *ngFor="let title of getResults()">
+        <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" (click)='getDetails(title)' />
+        <ion-icon name="add" (click)="addToWatchList(title)" *ngIf="!inWatchList(title)" class="add-icon"></ion-icon>
+        <ion-icon name="checkmark" (click)="removeFromWatchList(title)" *ngIf="inWatchList(title)"></ion-icon>
 
-      <p>{{ title.overview }}</p>
-      
-      <button ion-button color="secondary" (click)="addToAlreadyWatched()">Add to Already Watched</button>
-      <button ion-button color="purple" (click)="addToWatchList()">Add to Watch List</button>
-    </div>
-  </div>
+        <!-- <button ion-button color="secondary" (click)="addToAlreadyWatched()">Add to Already Watched</button>
+          <button ion-button color="purple" (click)="addToWatchList()">Add to Watch List</button> -->
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <div *ngIf="isNotFound()">
     <p>No tv shows found with that title</p>
