--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -6,16 +6,19 @@
 
 
 <ion-content>
-  <div *ngIf="getTitles().length; else no_content" class="already-watched-list">      
+  <div *ngIf="getTitles(); else no_content" class="already-watched-list">      
     
     <ion-list>
       <ion-item-sliding *ngFor="let title of getTitles()">
         <ion-item (click)="toggleFoo()">
-          <img [src]="title.imgUrl"><h1>{{ title.title }}</h1>
+          <img [src]="title.imgUrl">
+          <h1>{{ title.title }}</h1>
         </ion-item>
 
         <ion-item-options side="end">
-          <button ion-button color="danger" (click)="removeTitleFromAlreadyWatched(title.title)"><ion-icon name="trash"></ion-icon>Delete</button>
+          <button ion-button color="danger" (click)="removeTitleFromAlreadyWatched(title.title)">
+            <ion-icon name="trash"></ion-icon>Delete
+          </button>
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
