--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -1,15 +1,18 @@
-<!--
-  Generated template for the DiscoverPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>discover</ion-title>
+    <ion-title>Discover</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6 *ngFor="let title of getResults()">
+        <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" (click)='getDetails(title.id)' />
+        
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
