Add sort by on discover page

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -7,6 +7,7 @@
 <ion-content padding>
   <div *ngIf="loaded">
     <img src="{{'https://image.tmdb.org/t/p/w500/'+title.backdrop_path}}" />
+    {{title.overview}}
   </div>
 
 </ion-content>
