Add infinite scroll for discover page

--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-segment [(ngModel)]="selectedList" (onchange)="getTitles()">
+  <ion-segment [(ngModel)]="selectedList">
     <ion-segment-button value="alreadyWatched">
       Already Watched
     </ion-segment-button>
