--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -20,5 +20,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
