--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -31,4 +31,8 @@
   <div *ngIf="isNotProvided()">
     <p>Please provide a title to search for</p>
   </div>
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
