Add loading wheel on signup

--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -9,8 +9,8 @@
     <ion-select value="popularity.desc" [(ngModel)]="sort_by" (ionChange)="change_selection(sort_by)">
         <ion-option value="popularity.desc">Popularity ↓</ion-option>
         <ion-option value="popularity.asc">Popularity ↑</ion-option>
-        <ion-option value="first_air_date.asc">Newest</ion-option>
-        <ion-option value="first_air_date.desc">Oldest</ion-option>
+        <ion-option value="first_air_date.desc">Newest</ion-option>
+        <ion-option value="first_air_date.asc">Oldest</ion-option>
         <ion-option value="vote_average.desc">Top rated</ion-option>
     </ion-select>
   <ion-grid>
