--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Details</ion-title>
+    <ion-title>{{title.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 
