--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{title.name}}</ion-title>
+    <div *ngIf="loaded">
+    <ion-title>
+      {{title.name}}
+    </ion-title>
+    </div>
   </ion-navbar>
 </ion-header>
 
