--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -15,7 +15,7 @@
     </ion-select>
   <ion-grid>
     <ion-row>
-      <ion-col col-6 *ngFor="let title of getResults()">
+      <ion-col col-6 col-md-4 col-lg-2 *ngFor="let title of getResults()">
         <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" (click)='getDetails(title.id)' />
       </ion-col>
     </ion-row>
