--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -13,7 +13,7 @@
 
   <ion-grid *ngIf="isValidSearch()">
     <ion-row>
-      <ion-col col-6 *ngFor="let title of getResults()">
+      <ion-col col-6 col-md-4 col-lg-2 *ngFor="let title of getResults()">
         <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" (click)='getDetails(title)' />
         <ion-icon name="add" (click)="addToWatchList(title)" *ngIf="!inWatchList(title)" class="add-icon"></ion-icon>
         <ion-icon name="checkmark" (click)="removeFromWatchList(title)" *ngIf="inWatchList(title)"></ion-icon>
