--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -14,11 +14,18 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col col-6 col-md-4 col-lg-2 *ngFor="let id of getTitles()" class="poster">
-        <img [src]="getImageUrl(id)" class="poster" (click)='getDetails(id)'>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div class='content' (swipe)="swipeEvent($event)">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-6 col-md-4 col-lg-2 *ngFor="let id of getTitles()" class="poster">
+          <img [src]="getImageUrl(id)" ion-long-press class="poster" (onPressStart)="optionsID = id"
+            (click)='getDetails(id)'>
+          <div class="overlay" *ngIf="optionsID == id">hi</div>
+          <div class="invisible-overlay" *ngIf="optionsID && optionsID!= id" (click)="optionsID = undefined"
+            ion-long-press (onPressStart)="optionsID = id"></div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
 </ion-content>
