--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -20,7 +20,10 @@
         <ion-col col-6 col-md-4 col-lg-2 *ngFor="let id of getTitles()" class="poster">
           <img [src]="getImageUrl(id)" ion-long-press class="poster" (onPressStart)="optionsID = id"
             (click)='getDetails(id)'>
-          <div class="overlay" *ngIf="optionsID == id">hi</div>
+          <div class="overlay" *ngIf="optionsID == id">
+              <ion-icon [name]="selectedList=='watchList' ? 'archive' : 'add-circle'" (click)="moveToOtherList(id)"></ion-icon><br>
+              <ion-icon name="trash" (click)="removeFromList(id)"></ion-icon>
+          </div>
           <div class="invisible-overlay" *ngIf="optionsID && optionsID!= id" (click)="optionsID = undefined"
             ion-long-press (onPressStart)="optionsID = id"></div>
         </ion-col>
