--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]="myIndex">
-  <ion-tab [root]="tab1Root"  tabIcon="prefix-vault"></ion-tab>
-  <ion-tab [root]="tab2Root"  tabIcon="prefix-discover"></ion-tab>
-  <ion-tab [root]="tab3Root"  tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab1Root"  tabIcon="prefix-vault" tabTitle= "MyVault"></ion-tab>
+  <ion-tab [root]="tab2Root"  tabIcon="prefix-discover" tabTitle= "Discover"></ion-tab>
+  <ion-tab [root]="tab3Root"  tabIcon="prefix-search" tabTitle= "Search"></ion-tab>
 
 </ion-tabs>
