--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -1,18 +1,15 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Discover</ion-title>
-  </ion-navbar>
-</ion-header>
 
 <ion-content padding>
-    <ion-label>Sort by:</ion-label>
-    <ion-select value="popularity.desc" [(ngModel)]="sort_by" (ionChange)="change_selection(sort_by)">
-        <ion-option value="popularity.desc">Popularity ↓</ion-option>
-        <ion-option value="popularity.asc">Popularity ↑</ion-option>
+  <ion-item no-padding no-margin>
+    <ion-label>Sorted by</ion-label>
+    <ion-select no-padding value="popularity.desc" [(ngModel)]="sort_by" (ionChange)="change_selection(sort_by)">
+        <ion-option value="popularity.desc">Popularity (high to low)</ion-option>
+        <ion-option value="popularity.asc">Popularity (low to high)</ion-option>
         <ion-option value="first_air_date.desc">Newest</ion-option>
         <ion-option value="first_air_date.asc">Oldest</ion-option>
         <ion-option value="vote_average.desc">Top rated</ion-option>
     </ion-select>
+  </ion-item>
   <ion-grid>
     <ion-row>
       <ion-col col-6 col-md-4 col-lg-2 class="poster" *ngFor="let title of getResults()">
