--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]="myIndex">
-  <ion-tab [root]="tab1Root"  tabIcon="prefix-vault"></ion-tab>
-  <ion-tab [root]="tab2Root"  tabIcon="prefix-discover" ></ion-tab>
-  <ion-tab [root]="tab3Root"  tabIcon="prefix-search"></ion-tab>
-
-</ion-tabs>
+    <ion-tab [root]="tab1Root"  tabIcon="custom-icon1"></ion-tab>
+    <ion-tab [root]="tab2Root"  tabIcon="custom-icon2"></ion-tab>
+    <ion-tab [root]="tab3Root"  tabIcon="custom-icon3"></ion-tab>
+  </ion-tabs>
+  
