Fix alignment of grid in my vault page

--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header> -->
 
-<ion-content>
+<ion-content padding>
   <ion-segment [(ngModel)]="selectedList" (ionChange)="optionsID=undefined">
     <ion-segment-button value="alreadyWatched">
       ALREADY WATCHED
