--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,8 +1,8 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>Search</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
   <div class="search-imdb" padding>
