--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -13,13 +13,14 @@
 
   <ion-grid *ngIf="isValidSearch()">
     <ion-row>
-      <ion-col col-6 col-md-4 col-lg-2  class="poster" *ngFor="let title of getResults()">
+      <ion-col col-6 col-md-4 col-lg-2 class="poster" *ngFor="let title of getResults()">
         <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" class="poster" (click)='getDetails(title)' />
-        <ion-icon name="add" (click)="addToWatchList(title)" *ngIf="!inWatchList(title)" class="add-icon"></ion-icon>
-        <ion-icon name="checkmark" (click)="removeFromWatchList(title)" *ngIf="inWatchList(title)"></ion-icon>
-
-        <!-- <button ion-button color="secondary" (click)="addToAlreadyWatched()">Add to Already Watched</button>
-          <button ion-button color="purple" (click)="addToWatchList()">Add to Watch List</button> -->
+        <div class="icons">
+          <ion-icon *ngIf="inWatchList(title.id)" name="checkmark" color="danger"
+            (click)="removeFromWatchList(title.id)"></ion-icon>
+          <ion-icon *ngIf="!inWatchList(title.id)" name="add" color="primary" (click)="addToWatchList(title)">
+          </ion-icon>
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -33,6 +34,6 @@
   </div>
 
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
