--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -1,8 +1,8 @@
-<!-- <ion-header>
-  <ion-navbar (tap)="optionsID=undefined">
-    <ion-title>MyVault</ion-title>
+<ion-header no-border>
+  <ion-navbar>
+    <ion-title text-center>My Vault</ion-title>
   </ion-navbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content class="bg-color">
   <ion-segment [(ngModel)]="selectedList" (ionChange)="optionsID=undefined">
