--- a/src/pages/episode-details/episode-details.html
+++ b/src/pages/episode-details/episode-details.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the EpisodeDetailsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>{{episode?.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="details-bg-color">
+  <div class="backdrop" *ngIf="episode">
+    <img *ngIf="episode.still_path" [src]="'https://image.tmdb.org/t/p/original' + episode.still_path">
 
-    <div class="episode-data" *ngIf="episode">
+  </div>
+
+    <div padding class="episode-data" *ngIf="episode">
         <div class="name">{{ episode.name }}</div>
         <div class="year">{{ episode.air_date }}</div>
         <div class="vote">
