--- a/src/pages/episode-list/episode-list.html
+++ b/src/pages/episode-list/episode-list.html
@@ -6,11 +6,11 @@
   </ion-navbar>
 </ion-header>
 
-  <ion-content>
+<ion-content class="bg-color">
     <div class="show-data" *ngIf="seasons.length != 0">
       <ion-item-group *ngFor="let season of show.seasons;">
         <ion-item-divider sticky>Season {{season.season_number}}</ion-item-divider>
-        <ion-item *ngFor="let episode of getEpisodes(season.season_number)" (click)="getEpisodeDetails(episode)"> {{episode.name}} </ion-item>
+        <ion-item *ngFor="let episode of getEpisodes(season.season_number)" (click)="getEpisodeDetails(show, season, episode)"> {{episode.name}} </ion-item>
       </ion-item-group>
     </div>
   </ion-content>
