--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -21,19 +21,25 @@
   </div>
 
   <div class="buttons">
-    <div class="button" *ngIf="inList()">
+    <div class="button" *ngIf="inWatchList()">
       <button ion-button icon-only clear large color="danger" (click)="removeFromWatchList()">
         <ion-icon name="ios-checkmark-circle-outline"></ion-icon>
       </button>
     </div>
-    <div class="button" *ngIf="!inList()">
+    <div class="button" *ngIf="!inWatchList()">
       <button ion-button icon-only clear large (click)="addToWatchList()">
         <ion-icon name="ios-add-circle-outline"></ion-icon>
       </button>
     </div>
 
     <div class="button" *ngIf="!inAlreadyWatched()">
-      <button ion-button icon-only clear large (click)="addToAlreadyWatchedList()">
+      <button ion-button icon-only clear large color="primary" (click)="addToAlreadyWatchedList()">
+        <ion-icon name="custom-icon4"></ion-icon>
+      </button>
+    </div>
+
+    <div class="button" *ngIf="inAlreadyWatched()">
+      <button ion-button icon-only clear large color="active" (click)="removeFromAlreadyWatched()">
         <ion-icon name="custom-icon4"></ion-icon>
       </button>
     </div>
