--- a/src/pages/episode-list/episode-list.html
+++ b/src/pages/episode-list/episode-list.html
@@ -8,9 +8,9 @@
 
 <ion-content class="bg-color">
     <div class="show-data" *ngIf="seasons.length != 0">
-      <ion-item-group *ngFor="let season of show.seasons;">
+      <ion-item-group class="season" *ngFor="let season of show.seasons;">
         <ion-item-divider sticky>Season {{season.season_number}}</ion-item-divider>
-        <ion-item *ngFor="let episode of getEpisodes(season.season_number)" (click)="getEpisodeDetails(show, season, episode)"> {{episode.name}} </ion-item>
+        <ion-item class="episode" *ngFor="let episode of getEpisodes(season.season_number)" (click)="getEpisodeDetails(show, season, episode)"> {{episode.name}} </ion-item>
       </ion-item-group>
     </div>
   </ion-content>
