Add setting icon

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,6 @@
     <ion-tab [root]="tab1Root"  tabIcon="custom-icon1"></ion-tab>
     <ion-tab [root]="tab2Root"  tabIcon="custom-icon2"></ion-tab>
     <ion-tab [root]="tab3Root"  tabIcon="custom-icon3"></ion-tab>
-    <ion-tab [root]="tab4Root"  tabIcon="settings"></ion-tab>
+    <ion-tab [root]="tab4Root"  tabIcon="custom-icon5"></ion-tab>
   </ion-tabs>
   
