--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -14,14 +14,14 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-grid padding class='gestures' (tap)="optionsID=undefined" (swipe)="swipeEvent($event)">
+  <ion-grid padding class='gestures'  (swipe)="swipeEvent($event)">
     <ion-row>
       <ion-col col-6 col-md-4 col-lg-2 *ngFor="let id of getTitles()" class="poster">
         <img [src]="getImageUrl(id)" ion-long-press class="poster" (onPressStart)="optionsID=id" (click)='getDetails(id)'>
         <div class="overlay" *ngIf="optionsID == id">
           <div class="icons">
-            <ion-icon [name]="selectedList=='watchList' ? 'archive' : 'add-circle'" (click)="moveToOtherList(id)"></ion-icon><br>
-            <ion-icon name="trash" (click)="removeFromList(id)" ></ion-icon>
+            <ion-icon [name]="selectedList=='watchList' ? 'archive' : 'add-circle'" (tap)="moveToOtherList(id)"></ion-icon><br>
+            <ion-icon name="trash" (tap)="removeFromList(id)" ></ion-icon>
           </div>
         </div>
       </ion-col>
