Add progess bar to episodes view

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -43,6 +43,13 @@
         <ion-icon name="custom-icon4"></ion-icon>
       </button>
     </div>
+
+    <div class="button">
+        <button ion-button icon-only clear large color="active" (click)="removeFromAlreadyWatched()">
+          <ion-icon name="ios-share-outline"></ion-icon>
+        </button>
+      </div>
+
   </div>
 
   <div class="show-data" *ngIf="show">
